# pdf-utility-for-CA-office

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  models.rs
apps/desktop/src-tauri/src/services/: compress_service.rs  history_service.rs  index_service.rs  merge_service.rs  mod.rs  naming_service.rs  split_service.rs  validation_service.rs
apps/desktop/src/components/: FileDropzone.tsx  IndexEditor.tsx  ProgressModal.tsx
apps/desktop/src/pages/: CompressPage.tsx  Dashboard.tsx  JobsPage.tsx  MergePage.tsx  SettingsPage.tsx  SplitPage.tsx
apps/desktop/src/types/: contracts.ts
apps/desktop/src/utils/: naming.test.ts  naming.ts  range.test.ts  range.ts
docs/: architecture.md  roadmap.md
samples/: README.md
scripts/: README.md
