[package]
name = "ca-pdf-utility"
version = "0.1.0"
description = "Local-first PDF utility"
authors = ["Open Source Contributors"]
edition = "2021"

[lib]
name = "ca_pdf_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
printpdf = "0.7"
lopdf = "0.34"
tauri-plugin-dialog = "2"

tempfile = "3"

[dev-dependencies]

[build-dependencies]
tauri-build = { version = "2", features = [] }
